# mem0-local-mcp

./: .gitignore  LICENSE  README.md  RELEASE.md  config.example.yaml  config.py  pyproject.toml  requirements.txt  server.py  setup.py
src/: __init__.py  embedding.py  llm.py  memory.py  session_utils.py  vector_store.py
